--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,13 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4"
+actix-web-httpauth = "0.8"
+actix-web-grants = "4"
+
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 anyhow = "1"
+jsonwebtoken = "9"
+chrono = "0.4"
 
 sqlx = { version = "0.8", features = [
   "runtime-tokio",
@@ -27,7 +32,7 @@ tracing = {version = "0.1", features = ["attributes"]}
 tracing-log = "0.2"
 tracing-futures = "0.2"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
-tracing-actix-web = "0.7"
+tracing-actix-web = {version = "0.7", features = ["uuid_v7"]}
 
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
